--- a/studcrudfront/stTable.html
+++ b/studcrudfront/stTable.html
@@ -38,13 +38,13 @@
 <div class="card">
   <div class="card-header">
     <h3 class="card-title">Student Details</h3>
-    <button class="btn btn-danger fa fa-plus-square float-right font-weight-lighter card-title font-weight-normal"> &nbsp Add Student</button>
+    <button class="btn btn-dark  float-right font-weight-lighter card-title font-weight-normal"> <span class="fa fa-plus"></span> &nbsp Add Student</button>
   </div>
   <!-- /.card-header -->
   <div class="card-body">
     <table id="example1" class="table table-bordered table-striped">
       <thead>
-      <tr>
+      <tr class="text-center">
         <th>Student ID</th>
         <th>Name</th>
         <th>Phone</th>
@@ -56,7 +56,7 @@
         <th>Delete</th>
       </tr>
       </thead>
-      <tbody>
+      <tbody class="text-center">
       <tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -64,9 +64,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr>
       <tr>
         <td>Trident</td>
@@ -75,9 +75,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -85,9 +85,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -95,9 +95,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -105,9 +105,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -115,9 +115,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -125,9 +125,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr>
       <tr>
         <td>Trident</td>
@@ -136,9 +136,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr>
       <tr>
         <td>Trident</td>
@@ -147,14 +147,14 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-dark">View </button></td>
-        <td><button class="btn btn-dark">Edit </button></td>
-        <td><button class="btn btn-dark">Delete </button></td>
+        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
+        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
+        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
       </tr>
       
       </tbody>
       <tfoot>
-      <tr>
+      <tr class="text-center">
         <th>Student ID</th>
         <th>Name</th>
         <th>Phone</th>
