dark mode button

--- a/studcrudfront/header.html
+++ b/studcrudfront/header.html
@@ -41,6 +41,10 @@
         </div>
       </li>
       
+        <!--dark mode button-->
+        <li class="nav-item">
+          <a class="nav-link"><button class="btn btn-dark   navbar-badge  "><span class="fa fa-moon"></span></button></a>
+      </li>
       
     </ul>
   </nav>
