--- a/studcrudfront/stTable.html
+++ b/studcrudfront/stTable.html
@@ -28,7 +28,7 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="../studcrudfront/dashboard.html">Home</a></li>
               <li class="breadcrumb-item active">DataTables</li>
             </ol>
           </div>
@@ -38,11 +38,11 @@
 <div class="card">
   <div class="card-header">
     <h3 class="card-title">Student Details</h3>
-    <button class="btn btn-dark  float-right font-weight-lighter card-title font-weight-normal"> <span class="fa fa-plus"></span> &nbsp Add Student</button>
+    <a href="../studcrudfront/add.html" class="link"> <button class="btn btn-dark  float-right font-weight-lighter card-title font-weight-normal" > <span class="fa fa-plus"></span> &nbsp Add Student</button></a>
   </div>
   <!-- /.card-header -->
   <div class="card-body">
-    <table id="example1" class="table table-bordered table-striped">
+    <table id="example1" class="table table-bordered table-hover ">
       <thead>
       <tr class="text-center">
         <th>Student ID</th>
@@ -64,9 +64,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr>
       <tr>
         <td>Trident</td>
@@ -75,9 +75,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -85,9 +85,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -95,9 +95,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -105,9 +105,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -115,9 +115,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr><tr>
         <td>Trident</td>
         <td>Trident</td>
@@ -125,9 +125,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr>
       <tr>
         <td>Trident</td>
@@ -136,9 +136,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr>
       <tr>
         <td>Trident</td>
@@ -147,9 +147,9 @@
         <td>Trident</td>
         <td>Trident</td>
         <td>Trident</td>
-        <td><button class="btn btn-success"><span class="fa fa-id-card"></span></button></td>
-        <td><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></td>
-        <td><button class="btn btn-danger"><span class="fa fa-trash"></span></button></td>
+        <td><a href="../studcrudfront/view.html" class="link"><button class="btn btn-success"><span class="fa fa-id-card"></span></button></a></td>
+        <td><a href="../studcrudfront/edit.html" class="link"><button class="btn btn-primary"><span class="fa fa fa-pen"></span></button></a></td>
+        <td><a href="../studcrudfront/delete.html" class="link"><button class="btn btn-danger"><span class="fa fa-trash"></span></button></a></td>
       </tr>
       
       </tbody>
