--- a/studcrudfront/sideBar.html
+++ b/studcrudfront/sideBar.html
@@ -3,7 +3,7 @@
     <!-- Brand Logo -->
     <a href="../../index3.html" class="brand-link">
       <img src="../studcrudfront/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">StudentCrud</span>
+      <span class="brand-text font-weight-light">Tribodhi</span>
     </a>
 
     <!-- Sidebar -->
@@ -42,6 +42,20 @@
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="../studcrudfront/stTable.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>All student</p>
+                </a>
+              </li>
+                  <li class="nav-item">
+                  <a href="../studcrudfront/add.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Add student</p>
+                  </a>
+                </li>
+              </ul>
           </li>
          
           <li class="nav-item">
